--- a/galleria/src/main/resources/static/css/stile-custom.css
+++ b/galleria/src/main/resources/static/css/stile-custom.css
@@ -31,55 +31,61 @@
 }
 
 .vertical-alignment-helper {
-    display:table;
-    height: 100%;
-    width: 100%;
-    pointer-events:none;
+	display: table;
+	height: 100%;
+	width: 100%;
+	pointer-events: none;
 }
+
 .vertical-align-center {
-    /* To center vertically */
-    display: table-cell;
-    vertical-align: middle;
-    pointer-events:none;
+	/* To center vertically */
+	display: table-cell;
+	vertical-align: middle;
+	pointer-events: none;
 }
+
 .modal-content {
-    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
-    width:inherit;
-    height:inherit;
-    /* To center horizontally */
-    margin: 0 auto;
-    pointer-events:all;
-}
-.modal-footer{
-	text-align:center;
+	/* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+	width: inherit;
+	height: inherit;
+	/* To center horizontally */
+	margin: 0 auto;
+	pointer-events: all;
 }
 
-.form-group{
-	margin:0px;
-	padding:0px;
+.modal-footer {
+	text-align: center;
 }
 
-.mostraDati{
+.form-group {
+	margin: 0px;
+	padding: 0px;
+}
+
+.mostraDati {
 	margin: auto;
 	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14pt;
 	text-align: center;
 }
 
-.mostraDati p { display: inline }
+.mostraDati p {
+	display: inline
+}
 
-.dati{
+.dati {
 	color: #204a87;
 	font-style: italic;
 }
 
-.portfolio-item{
-	width:33%;
+.portfolio-item {
+	width: 33%;
 	height: 150px;
 	padding: 10px;
-	background-color: #e8e8e8;
+	background-color: #f5f5f5;
 }
-.portfolio-item img{
+
+.portfolio-item img {
 	display: block;
 	width: 100%;
 	max-height: 120px;
@@ -89,44 +95,79 @@
 	border: 1px solid #204a87;
 }
 
-
-
 #custom-search-input {
-        margin:0;
-        margin-top: 10px;
-        padding: 0;
-    }
- 
-    #custom-search-input .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
- 
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
- 
-    #custom-search-input button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        color:#D9230F;
-    }
- 
-    .search-query:focus + button {
-        z-index: 3;   
-    }
+	margin: 0;
+	margin-top: 10px;
+	padding: 0;
+}
 
+#custom-search-input .search-query {
+	padding-right: 3px;
+	padding-right: 4px \9;
+	padding-left: 3px;
+	padding-left: 4px \9;
+	/* IE7-8 doesn't have border-radius, so don't indent the padding */
+	margin-bottom: 0;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+
+#custom-search-input button {
+	border: 0;
+	background: none;
+	/** belows styles are working good */
+	padding: 2px 5px;
+	margin-top: 2px;
+	position: relative;
+	left: -28px;
+	/* IE7-8 doesn't have border-radius, so don't indent the padding */
+	margin-bottom: 0;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	color: #D9230F;
+}
+
+.search-query:focus+button {
+	z-index: 3;
+}
+
+.portfolio2-item {
+	text-align: justify;
+	width: 30%;
+	height: 500px;
+	padding: 10px;
+	background-color: #f5f5f5;
+	margin: 0px 10px 10px 0;
+	border: 2px solid #18BC9C;
+    border-radius: 5px;
+    overflow-y:auto;
+    
+}
+
+.portfolio2-item img {
+	display: block;
+	width: 100%;
+	max-height: 200px;
+	width: auto;
+	height: auto;
+	margin: auto;
+	border: 1px solid #204a87;
+}
+
+.btn-outline2 {
+	color: #18BC9C;
+	font-size: 20px;
+	border: 2px solid #18BC9C;
+	background: 0 0;
+	transition: all .3s ease-in-out;
+	margin-top: 15px
+}
+
+.btn-outline2.active, .btn-outline2:active, .btn-outline2:focus,
+	.btn-outline2:hover {
+	color: #fff;
+	background: #18BC9C;
+	border: 2px solid #18BC9C;
+}
