--- a/galleria/src/main/resources/templates/home.html
+++ b/galleria/src/main/resources/templates/home.html
@@ -78,8 +78,8 @@
 					<li class="page-scroll"></li>
 					<li class="page-scroll"><a href="/admin">Admin</a></li>
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
-					<li class="page-scroll"><a href="#about">info</a></li>
-					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
+					<li class="page-scroll"><a href="#about">Artisti</a></li>
+					<li class="page-scroll"><a href="#contact">Stanze</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -150,16 +150,18 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<hr class="star-primary" />
-					<div class="dropdown">
-						<button class="btn btn-primary dropdown-toggle" type="button"
-							data-toggle="dropdown">
-							<h1>Vedi Tutte</h1> <span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu">
-							<li><a th:href="@{/listaOpere(comp='nome')}">Per nome</a></li>
-							<li><a th:href="@{/listaOpere(comp='anno')}">Per anno</a></li>
-						</ul>
-					</div>
+					<h1>
+						Vedi Tutte: 
+					</h1>
+						<a th:href="@{/lista/opere(comp='null')}" class="btn btn-lg btn-outline2">
+							<i class="fa fa-image"></i> Da Recenti
+						</a>
+						<a th:href="@{/lista/opere(comp='nome')}" class="btn btn-lg btn-outline2">
+							<i class="fa fa-image"></i> Per Nome
+						</a>
+						<a th:href="@{/lista/opere(comp='anno')}" class="btn btn-lg btn-outline2">
+							<i class="fa fa-image"></i> Per Anno
+						</a>
 				</div>
 			</div>
 		</div>
@@ -170,26 +172,24 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>info</h2>
+					<h2>artisti</h2>
 					<hr class="star-light" />
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-2">
-					<p>Freelancer is a free bootstrap theme created by Start
-						Bootstrap. The download includes the complete source files
-						including HTML, CSS, and JavaScript as well as optional LESS
-						stylesheets for easy customization.</p>
+					<p style="text-align: justify;">Cosa sarebbe una galleria
+						d'arte senza artisti? Ognuno con il suo stile inconfondibile,
+						scopri quali sono quelli presenti nella nostra galleria.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>Whether you're a student looking to showcase your work, a
-						professional looking to attract clients, or a graphic artist
-						looking to share your projects, this template is the perfect
-						starting point!</p>
+					<p style="text-align: justify;">Da essi potrai risalire alle
+						loro opere e potrai scoprire nella sezione seguente dove trovarle
+						quando ci farai visita! Clicca qui sotto per procedere.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<a href="#" class="btn btn-lg btn-outline"> <i
-						class="fa fa-download"></i> Download Theme
+					<a th:href="@{/lista/autori}" class="btn btn-lg btn-outline"> <i
+						class="fa fa-user"></i> Artisti
 					</a>
 				</div>
 			</div>
@@ -201,60 +201,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Contact Me</h2>
+					<h2>Stanze</h2>
 					<hr class="star-primary" />
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-					<!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-					<form name="sentMessage" id="contactForm">
-						<div class="row control-group">
-							<div
-								class="form-group col-xs-12 floating-label-form-group controls">
-								<label for="name">Name</label> <input type="text"
-									class="form-control" placeholder="Name" id="name"
-									data-validation-required-message="Please enter your name." />
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<div class="row control-group">
-							<div
-								class="form-group col-xs-12 floating-label-form-group controls">
-								<label for="email">Email Address</label> <input type="email"
-									class="form-control" placeholder="Email Address" id="email"
-									data-validation-required-message="Please enter your email address." />
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<div class="row control-group">
-							<div
-								class="form-group col-xs-12 floating-label-form-group controls">
-								<label for="phone">Phone Number</label> <input type="tel"
-									class="form-control" placeholder="Phone Number" id="phone"
-									data-validation-required-message="Please enter your phone number." />
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<div class="row control-group">
-							<div
-								class="form-group col-xs-12 floating-label-form-group controls">
-								<label for="message">Message</label>
-								<textarea rows="5" class="form-control" placeholder="Message"
-									id="message"
-									data-validation-required-message="Please enter a message."></textarea>
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-						<br />
-						<div id="success"></div>
-						<div class="row">
-							<div class="form-group col-xs-12">
-								<button type="submit" class="btn btn-success btn-lg">Send</button>
-							</div>
-						</div>
-					</form>
+					<p style="text-align: center;">Cosa puoi visitare nella nostra
+						galleria? Quali opere sono esposte e dove? Puoi scoprirlo
+						navigando fra le nostre stanze!</p>
+					<div class="col-lg-8 col-lg-offset-2 text-center">
+						<a th:href="@{/lista/stanze}" class="btn btn-lg btn-outline2">
+							<i class="fa fa-map-o"></i> Stanze
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -266,13 +226,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="footer-col col-md-4">
-						<h3>Location</h3>
+						<h3>Dove Siamo</h3>
 						<p>
-							3481 Melrose Place <br />Beverly Hills, CA 90210
+							Città,Provincia <br />Via .... 123
 						</p>
 					</div>
 					<div class="footer-col col-md-4">
-						<h3>Around the Web</h3>
+						<h3>Seguici sui Social</h3>
 						<ul class="list-inline">
 							<li><a href="#" class="btn-social btn-outline"><span
 									class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
@@ -289,10 +249,11 @@
 						</ul>
 					</div>
 					<div class="footer-col col-md-4">
-						<h3>About Freelancer</h3>
+						<h3>Crediti</h3>
 						<p>
-							Freelance is a free to use, open source Bootstrap theme created
-							by <a href="http://startbootstrap.com">Start Bootstrap</a>.
+							Tema: <a href="https://startbootstrap.com/">StartBoostrap</a><br />
+							Creatori: <a href="#">Federico Roma</a>, <a href="#">Marco
+								Moauro</a>
 						</p>
 					</div>
 				</div>
