Aggiunta visualizzazione delle stanze (per l'utente).

--- a/galleria/src/main/resources/templates/autore/datiAutore.html
+++ b/galleria/src/main/resources/templates/autore/datiAutore.html
@@ -90,7 +90,7 @@
 					</div><br></br>
 					<form th:action="@{/admin/autori}" method="get">
 						<input type="submit" class="btn btn-primary"
-							value="Torna alla pagine degli autori"></input>
+							value="Torna alla pagina degli autori"></input>
 					</form><br></br>
 					<form th:action="@{/admin/autore/inserisci}" method="get">
 						<input type="submit" class="btn btn-primary"
