--- a/galleria/src/main/resources/templates/stanza/datiStanza.html
+++ b/galleria/src/main/resources/templates/stanza/datiStanza.html
@@ -82,7 +82,7 @@
 					
 					<form th:action="@{/admin/stanze}" method="get">
 						<input type="submit" class="btn btn-primary"
-							value="Torna alla pagine delle stanze"></input>
+							value="Torna alla pagina delle stanze"></input>
 					</form><br></br>
 					<form th:action="@{/admin/stanza/inserisci}" method="get">
 						<input type="submit" class="btn btn-primary"
