Modificata la pagina del riepilogo dati dell'admin + Fix vari.

--- a/galleria/src/main/resources/templates/admins/adminForm.html
+++ b/galleria/src/main/resources/templates/admins/adminForm.html
@@ -61,7 +61,7 @@
 									<li>Email</li>
 									<li>
 										<form th:action="@{/logout}" method="post">
-											<input class="btn btn-primary" type="submit" value="Sign Out" />
+											<input class="btn btn-primary" type="submit" value="Log Out" />
 										</form>
 									</li>
 								</ul>
