Modificata la pagina riepilogo della ricerca delle opera.

--- a/galleria/src/main/resources/templates/admin.html
+++ b/galleria/src/main/resources/templates/admin.html
@@ -68,7 +68,7 @@
 					</header>
 				</div>
 				<div class="user-dashboard">
-					<h1>Bentornato, NomeAdmin<!-- <span th:text="${admin.username}"></span> --></h1>
+					<h1>Bentornato, NomeAdmin<span th:text="${username}" ></span> </h1>
 				</div>
 			</div>
 		</div>
